# modern-python-development-environment

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/my_package/: my_module.py
