# ============================
# Project
# Reference: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#
# Install the package: python-dotenv
# I showed how in README.md
#
# The points of attention are commented next to the keys, here I just put a
# reminder.
#
# Attention: Python versions must be consistent between:
#   - project.requires-python
#   - tool.ruff.target-version
#   - tool.pyright.pythonVersion
#
# Attention: The main package name must be consistent between:
#   - project.scripts
#   - tool.ruff.lint.isort.known-first-party
#   - The folder inside 'src/'
# ============================
[project]
name = "project"
version = "0.0.1"
description = "project"
readme = "README.md"
license = "MIT"
authors = [{ name = "Miguel Costa", email = "miguelcosmecosta@email.com" }]
requires-python = ">=3.13"
dependencies = ["python-dotenv>=1.1.0"]

[project.urls]
Homepage = "https://homepage.example.com"
# Documentation = "https://example.org"
# Repository = "https://github.com/me/spam.git"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-xdist"]

[project.scripts]
# Defines the console commands. The key ('project') is the command.
# The value points to 'package_name.module_name:function_name'.
# Ex: 'my_package.main:run' -> src/my_package/main.py (and the run function inside).
# Remember to sync the package name with Ruff's 'known-first-party'.
project = "my_package.my_module:run_from_script"

# ============================
# Lint and formatting (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = ["T201", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
# Teaches Ruff what the main package of your project is.
# It must be the same name as the folder inside 'src/'.
known-first-party = ["my_package"]


# ============================
# Typing (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

# ============================
# Tests (Pytest)
# ============================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
# Adds 'src' to the Python path during tests. This allows
# tests in `tests/` to import modules from `src/` without errors.
pythonpath = ["src"]
testpaths = ["tests"]


# ============================
# Build and Setuptools
# ============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Tells setuptools to find packages inside the 'src' folder.
# Essential for the layout structure with 'src/'.
where = ["src"]

[tool.setuptools]
# Maps the root package directory to 'src'.
package-dir = { "" = "src" }